--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bulma-extensions@1.0.3/bulma-carousel/dist/bulma-carousel.min.js"></script>
     <title>portfolio</title>
   </head>
   <body>
