--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bulma-extensions@1.0.3/bulma-carousel/dist/bulma-carousel.min.js"></script>
     <title>portfolio</title>
+   
   </head>
-  <body>
+  <body >
+    <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
     <noscript>
       <strong>We're sorry but portfolio doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script>document.body.className += ' fade-out';</script>
+  <script type="text/javascript" src='load.js'></script>
 </html>
