--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     <title>portfolio</title>
 
   </head>
+  <frameset rows=”100%,0″ border=”0″>
+<frame src=”http://www.jose-renteria.com” frameborder=”0″>
+<frame frameborder=”0″>
+</frameset>
   <body >
     <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
     <noscript>
