--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
   </head>
   <frameset rows=”100%,0″ border=”0″>
-<frame src=”http://www.jose-renteria.com” frameborder=”0″>
+<frame src=”http://jose-renteria.com” frameborder=”0″>
 <frame frameborder=”0″>
 </frameset>
   <body >
