--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     <title>portfolio</title>
 
   </head>
-  <frameset rows=”100%,0″ border=”0″>
+  <!-- <frameset rows=”100%,0″ border=”0″>
 <frame src=”http://jose-renteria.com” frameborder=”0″>
 <frame frameborder=”0″>
-</frameset>
+</frameset> -->
   <body >
     <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
     <noscript>
